--- a/demo/src/main/resources/application.yaml
+++ b/demo/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
     show-sql: true
-    database-platform: org.hibernate.dialect.ClickHouseDialect6
+    database-platform: org.hibernate.dialect.ClickHouseDialect
     properties:
       hibernate:
         generate_statistics: true
