--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.30</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.sinfull1</groupId>
+            <artifactId>hibernate6-clickhouse-dialect</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream-binder-kafka-streams</artifactId>
