--- a/demo/src/main/resources/application.yaml
+++ b/demo/src/main/resources/application.yaml
@@ -9,18 +9,18 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-    show-sql: true
+    show-sql: false
     database-platform: org.hibernate.dialect.ClickHouseDialect
     properties:
       hibernate:
-        generate_statistics: true
+        generate_statistics: false
         jdbc:
           batch_size: 10000
         order_updates: true
 
 
   datasource:
-    url: jdbc:clickhouse://localhost:18123/default
+    url: jdbc:clickhouse://localhost:8123/default
     username: default
     driver-class-name: com.clickhouse.jdbc.ClickHouseDriver
     hikari:
@@ -51,7 +51,6 @@ spring:
           producer:
             timeout: 10000
             partition-count: 1
-            partitioner-class: org.example.demo.CustomPartitioner
         transactions-in-0:
           destination: orders-buy-1
           group: transactions
