--- a/flight-api/src/main/resources/application.yaml
+++ b/flight-api/src/main/resources/application.yaml
@@ -12,11 +12,11 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-    show-sql: false
+    show-sql: true
     database-platform: org.hibernate.dialect.ClickHouseDialect
     properties:
       hibernate:
-        generate_statistics: false
+        generate_statistics: true
         jdbc:
           batch_size: 10000
         order_updates: true
