--- a/flight-api/src/main/resources/application.yaml
+++ b/flight-api/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 server:
   port: 8080
-
+redis:
+  om:
+    spring:
+      repository:
+        query:
+          limit: 2000
 spring:
   sql:
     init:
