change hibenrtae dialect lib version

--- a/flight-api/pom.xml
+++ b/flight-api/pom.xml
@@ -170,12 +170,12 @@
 
     <build>
         <plugins>
-             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <mainClass>com.example.demo.DemoApplication</mainClass>
+                    <addResources>true</addResources>
                 </configuration>
             </plugin>
         </plugins>
